# MLOps

./: .gitignore  doltgres.Dockerfile  install.sh  ip_pool.yaml
advanced/: pyproject.toml
basic/01_avg/: numpy_avg_wf.py
chart/: Chart.yaml  values.yaml
chart/charts/: minio-12.6.7.tgz
charts/: Chart.yaml  values.yaml
doltgres/: doltgres.Dockerfile
flyte-plugin/dataframe/: README.md  config.yaml  demo.py  pyproject.toml
flyte-plugin/dataframe/src/tasks/: say_hello.py
flyte-plugin/dataframe/src/workflows/: hello_world.py
gpu_monitor/: Dockerfile  Makefile  README.md  main.py  pyproject.toml  run.sh
infra/: Chart.yaml  values.yaml
infra/templates/: postgres.yaml
interview/medic_mnist/: Makefile  data.py  main.py  model.py  pyproject.toml  test.py  train.py
interview/model_eval/: Makefile  README.md  pyproject.toml
interview/model_eval/src/core/: core.py
interview/model_eval/src/tasks/: eval.py
interview/model_eval/src/workflows/: wf.py
interview/xray_preprocess/: README.md  pyproject.toml
interview/xray_preprocess/src/core/: core.py  utils.py
interview/xray_preprocess/src/tasks/: preprocess.py
interview/xray_preprocess/src/workflows/: hello_world.py  wf.py
mcp_drivers/: Dockerfile  llm_engine.py  pyproject.toml  weather_server.py  weather_server.yaml
plugin/serving/01_ollama/: ollama_demo.py  pyproject.toml
race-01/: Makefile  pyproject.toml
race-01/docs/: README.md
race-01/src/core/: encoding.py  model.py
race-01/src/orchestration/: constants.py
race-01/src/tasks/: load_data.py  process.py  train.py  visual.py
race-01/src/workflows/: race_wf.py  visual_wf.py
race_01/: pyproject.toml
race_01/src/core/: model.py
race_01/src/orchestration/: constants.py
race_01/src/tasks/: train.py
race_02/: dataset.yaml  pyproject.toml
race_02/src/tasks/: train.py  upload.py
race_02/src/workflows/: main.py
race_alert_accounts_prediction/: pyproject.toml
race_alert_accounts_prediction/docs/: README.md
race_alert_accounts_prediction/src/core/: model.py
race_alert_accounts_prediction/src/orchestration/: constants.py
race_alert_accounts_prediction/src/tasks/: process.py
race_alert_accounts_prediction/src/workflows/: race_wf.py
race_heart/: pyproject.toml
race_heart/docs/: README.md
race_heart/src/orchestration/: constants.py
races/race_alert_accounts_prediction/: pyproject.toml
races/race_alert_accounts_prediction/src/core/: encoding.py
races/race_alert_accounts_prediction/src/tasks/: train.py
races/race_heart/: Makefile  main.py
races/race_heart/src/workflows/: main.py
ray_example/ray_batch_inference/: README.md  pyproject.toml
ray_example/ray_batch_inference/docs/: docs.md
ray_example/ray_batch_inference/src/core/: core.py
ray_example/ray_batch_inference/src/tasks/: preprocess.py  say_hello.py
ray_example/ray_batch_inference/src/workflows/: wf.py
ray_example/train/pytorch_demo/: basic.py  basic_wf.py  pyproject.toml
serve-demo/: main.py  pyproject.toml
