[project]
name = "flyte-production"
version = "0.1.0"
description = "A Flyte production project"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "flytekit",
    "matplotlib>=3.9.4",
    "opencv-python>=4.12.0.88",
    "pydicom>=2.4.4",
    "scikit-image>=0.24.0",
    "scipy>=1.13.1",
]

[dependency-groups]
dev = [
    "isort>=6.1.0",
    "ruff>=0.14.6",
]
